force-app/main/default/objects/Insurance_Add_on__c/Insurance_Add_on__c.object-meta.xml
<CustomObject>
    <label>Insurance Add-on</label>
    <nameField>
        <label>Insurance Add-on Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Add-ons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>