force-app/main/default/objects/Insurance_Add_on__c/fields/Add_on_Code__c.field-meta.xml
<CustomField>
    <fullName>Add_on_Code__c</fullName>
    <label>Add-on Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>