force-app/main/default/objects/Insurance_Add_on__c/fields/Add_on_Type__c.field-meta.xml
<CustomField>
    <fullName>Add_on_Type__c</fullName>
    <label>Add-on Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rider</fullName>
            </value>
            <value>
                <fullName>Coverage Extension</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Fee Waiver</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>