force-app/main/default/objects/Insurance_Add_on__c/fields/Description_c__c.field-meta.xml
<CustomField>
    <fullName>Description_c__c</fullName>
    <label>Description__c</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>