force-app/main/default/objects/Insurance_Add_on__c/fields/One_time_Fee__c.field-meta.xml
<CustomField>
    <fullName>One_time_Fee__c</fullName>
    <label>One-time Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>